2005-05-16  David Ayers  <d.ayers@inode.at>

	* GSWAdaptors/Apache/configure.ac: Only add to CPPFLAGS if
	ac_x_includes is set and only add LDFLAGS if ac_x_libraries
	set.  Refer to variables in consistent form.
	
2005-05-09  David Ayers  <d.ayers@inode.at>

	* GSWAdaptors/Apache/mod_gsweb.c: Rename GSWeb_Module to
	gsweb_module for apxs integration.
	* INSTALL: Refer to GSWAdaptors/Apache/INSTALL for Apache
	specific installation instructions.  Move Apache specific
	installation instructions to GSWAdaptors/Apache/INSTALL.
	* GSWAdaptors/Apache/INSTALL: Update to new ./configure
	usage and new install and httpdconfig make targets.
	* GSWAdaptors/Apache/GNUmakefile.in: New file to build
	the adaptor module with apxs and apr-config.
	* GSWAdaptors/Apache/configure[.ac]: New files
	* GSWAdaptors/Apache/config.guess: Ditto.
	* GSWAdaptors/Apache/config.sub: Ditto.
	* GSWAdaptors/Apache/install-sh: Ditto.
	
2005-05-04  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWUtils.h/m (GetTmpName): Remove unused
	function which generates warnings about tempnam usage.
	
2005-05-03  David Ayers  <d.ayers@inode.at>

	* GSWAdaptors/common/GSWStats.c (GSWStats_formatStats):
	Use standard strtod instead of the GNU extension strtof
	which is stored in a double anyway.
	
2005-05-02  David Ayers  <d.ayers@inode.at>

	* GNUmakefile, Examples/hello/GNUmakefile, 
	GSWExtensions.framework/GNUmakefile,
	GSWExtensionsGSW.framework/GNUmakefile,
	Testing/DynamicElements/GNUmakefile: Do not reset
	GNUSTEP_MAKEFILES to an obsolete location.
	
2005-04-24  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWMessage.m:
		o fixed indentation and double ;;
	* GSWeb.framework/GSWPopUpButton.m:
		o fix in comments
		o fix output in -appendToResponse:inContext: 
		o avoid string formatting
	* GSWeb.framework/GSWSessionTimeOut.m:
		o improved logs
	* GSWeb.framework/GSWTemplateParser.h
		o added +templateWithHTMLString:declarationString:languages: 
		declaration